--- a/components/rentals/res_edit.jade
+++ b/components/rentals/res_edit.jade
@@ -22,8 +22,21 @@ template(name='reservation_edit')
                         .ui.inline.header $#{daily_dollars}
                             small /day
                         +image_view key='image' label='image' direct=true classes='ui rounded image'
-                        //- +number_view key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
-                        //- +number_view key='daily_karma' label='daily rate (karma)' icon='yin-yang' direct=true
+                    .result_column        
+                        .ui.header 
+                            +i name='payroll'
+                            small 50% owner
+                            |$#{owner_payout} to #{rental.owner_username}
+                        .ui.header.handler
+                            +i name='get-cash'
+                            small 45% handler
+                            | $#{handler_payout} to #{rental.handler_username}
+                        div
+                        .ui.header 
+                            +i name='tax'
+                            small 5% taxes
+                            | $#{taxes_payout}
+                
                 .column 
                     a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
                     .ui.fluid.button.reserve_now(class=now_button_class)
@@ -39,97 +52,57 @@ template(name='reservation_edit')
                         //- +datetime_edit key='start_datetime' label='start datetime' direct=true
                     .ui.header 
                         |duration
-                    //- .ui.compact.button.select_month(class=sel_month_class)
-                    //-     +i name='calendar'
-                    //-     |month
-                    //- .ui.compact.button.select_day(class=sel_day_class)
-                    //-     +i name='sun'
-                    //-     |day
-                    //- .ui.compact.button.select_hour(class=sel_hr_class)
-                    //-     +i name='clock'
-                    //-     |hour
                     div
-                    //- if is_hour
-                    //- .ui.button.set_1_hr 1 hr
-                    //- +key_value_edit key='hour_duration' value=.5 label='1/2'
-                    //- +key_value_edit key='hour_duration' value=1 label='1 hr'
-                    //- +key_value_edit key='hour_duration' value=2 label='2 hrs'
-                    //- +key_value_edit key='hour_duration' value=3 label='3 hrs'
                     .ui.input            
                         input.other_hour(type='number' min='0' value=hour_duration autocomplete="off")
-                    //- if is_day 
-                    //-     +number_view key='daily_dollars' label='daily rate ($)'
-                    //-     //- +number_view key='daily_karma' label='daily rate (karma)'
-                    //-     +key_value_edit key='day_duration' value=1 label='1 day'
-                    //-     +key_value_edit key='day_duration' value=2 label='2 days'
-                    //-     +key_value_edit key='day_duration' value=3 label='3 days'
-                    //-     +key_value_edit key='day_duration' value=3 label='other'
-                    //-     +number_edit key='day_duration' label='other' direct=true
-                    //- if is_month
-                    //-     +number_view key='monthly_dollars' label='monthly rate ($)'
-                    //-     //- +number_view key='monthly_karma' label='monthly rate (karma)'
-                    //-     +key_value_edit key='month_duration' value=1 label='1 month'
-                    //-     +key_value_edit key='month_duration' value=2 label='2 months'
-                    //-     +key_value_edit key='month_duration' value=3 label='3 months'
-                    //-     +key_value_edit key='month_duration' value=3 label='other'
-                    //-     +number_edit key='month_duration' label='other' direct=true
-                    //- +date_edit key='end_date' label='end date' icon='date-to' direct=true
-                    //- +time_edit key='end_time' label='end time' icon='time' direct=true
                     .ui.header 
                         +i name='date-from'    
                         |end date/time            
                     .ui.input
                         input.res_end(type='datetime-local' value="#{end_datetime}")
-            
-                    //- +key_value_edit key='minute_duration' value=30 label='1/2'
-                    //- +key_value_edit key='minute_duration' value=60 label='1 hour'
-                    //- +key_value_edit key='minute_duration' value=120 label='2 hrs'
-                    //- +key_value_edit key='minute_duration' value=180 label='3 hrs'
-                    //- +number_edit key='minute_duration' label='minute duration' direct=true
-                .column
-                    .ui.header.lowercase 
-                        small from 
-                        |{{cal_time start_datetime}}
-                    .ui.header.lowercase 
-                        small to
-                        |{{cal_time end_datetime}}
-                    .ui.header 
-                        +i name='money' classes='ui tiny inline image'
-                        | #{hour_duration}
-                        small hrs * $
-                        |#{rental.hourly_dollars}
-                        small /hr = $
-                        |#{cost}
-                    .ui.header 
-                        +i name='payroll'
-                        small 50% owner payout
-                        |$#{owner_payout} to #{rental.owner_username}
-                    .ui.header 
-                        +i name='get-cash'
-                        small 45% handler payout
-                        | $#{handler_payout} to #{rental.handler_username}
-                    .ui.header 
-                        +i name='tax'
-                        small 5% taxes
-                        | $#{taxes_payout}
-                    .ui.divider
-                    .ui.inline.header 
-                        small your balance
-                        +i name='cheap-2--v1' 
-                        |{{fixed currentUser.credit}} 
-                    .ui.inline.header
-                        small - 
-                        //- small reservation cost 
-                        |#{cost} 
-                    .ui.inline.header 
-                        small = 
-                        //- small balance after purchase 
-                        +i name='cheap-2--v1' 
-                        |{{fixed member_balance_after_reservation}}
+                .column.result_column.rounded
+                    if start_datetime
+                        .ui.header.lowercase 
+                            small from 
+                            |{{cal_time start_datetime}}
+                        if end_datetime
+                            .ui.header.lowercase 
+                                small to
+                                |{{cal_time end_datetime}}
+                            .ui.header 
+                                +i name='money' classes='ui tiny inline image'
+                                | #{hour_duration}
+                                small hrs * $
+                                |#{rental.hourly_dollars}
+                                small /hr = $
+                                |#{cost}
+                            if rental.res_start_dropoff
+                                |reservation start dropoff available for $#{rental.res_start_dropoff_fee} extra
+                                +boolean_edit key='res_start_dropoff_selected' classes='trigger_recalc' label='select start dropoff' direct=true data=this._id  
+                            div
+                            if rental.res_end_pickup
+                                |reservation end pickup available for $#{rental.res_end_pickup_fee} extra
+                                +boolean_edit key='res_end_pickup_selected' classes='trigger_recalc' label='select end pickup' direct=true data=this._id
+                            .ui.divider
+                            .ui.header 
+                                small your balance
+                                +i name='coins' 
+                                |{{fixed currentUser.credit}} 
+                            .ui.header.result
+                                | -  #{cost} 
+                                if res_start_dropoff_selected
+                                    | + #{rental.res_start_dropoff_fee}
+                                if res_end_pickup_selected
+                                    | + #{rental.res_end_pickup_fee}
+                            .ui.header.result
+                                small = 
+                                //- small balance after purchase 
+                                +i name='coins' 
+                                |#{member_balance_after_reservation}
                         
                         
                     unless submitted
-                        .ui.big.green.fluid.button.submit_reservation 
+                        .ui.big.green.fluid.button.submit_reservation(class=submit_button_class)
                             +i name='paid'        
                             |submit and pay
                     else
