--- a/components/rentals/res_view.jade
+++ b/components/rentals/res_view.jade
@@ -9,6 +9,7 @@ template(name='reservation_view')
                                 i.left.chevron.icon
                                 |#{title}
                         +image_view key='image' label='image' direct=true
+                        +comments
                 .eight.wide.column 
                     .ui.header 
                         |viewing reservation
@@ -18,17 +19,18 @@ template(name='reservation_view')
                         |{{cal_time start_datetime}}
                         small to 
                         |{{cal_time end_datetime}}
-                    .ui.header 
-                        +i name='money' classes='ui tiny inline image'
-                        |estimated dollars #{hour_duration}*#{rental.hourly_dollars} = $#{cost}
-                    .ui.header final cost will be based on actual checked out time
                     if complete 
                         .ui.large.green.label complete 
                     else 
                         .ui.basic.large.label ongoing (incomplete)
                     .ui.small.header #{when} by #{_author_username}
-                    +number_view key='hour_duration' label='hour duration' direct=true
-                    .ui.header estimated cost #{hour_duration}*#{rental.hourly_dollars} = $#{cost}
+                    .ui.header 
+                        +i name='money' classes='ui tiny inline image'
+                        | #{hour_duration}
+                        small hrs * $
+                        |#{rental.hourly_dollars}
+                        small /hr = $
+                        |#{cost}
                     .ui.header by #{_author_username}
                     +reservation_events
                 .four.wide.column
@@ -49,28 +51,17 @@ template(name='reservation_view')
                         |#{cost}
                     .ui.header 
                         +i name='payroll'
-                        small 50% owner payout 
-                        |$#{owner_payout}
-                    .ui.header 
+                        small 50% owner
+                        |$#{owner_payout} to #{rental.owner_username}
+                    .ui.header.handler
                         +i name='get-cash'
-                        small 40% handler payout
-                        | $#{handler_payout}
+                        small 45% handler
+                        | $#{handler_payout} to #{rental.handler_username}
+                    div
                     .ui.header 
                         +i name='tax'
-                        small taxes
+                        small 5% taxes
                         | $#{taxes_payout}
-                    .ui.divider
-                    .ui.header 
-                        small your balance
-                        +i name='cheap-2--v1' 
-                        |{{fixed currentUser.credit}} 
-                    .ui.header
-                        small reservation cost 
-                        |#{cost} 
-                    .ui.header 
-                        small balance after purchase 
-                        +i name='cheap-2--v1' 
-                        |{{fixed member_balance_after_reservation}}
 
 
 template(name='reservation_events')
