static nav, remove duration and end time if no start_time on res_edit, add handler user section, pulse on calculator update,

--- a/client/fields.jade
+++ b/client/fields.jade
@@ -192,7 +192,7 @@ template(name='image_view')
         //-     |#{key}
         //- else
         //-     |#{this}
-        img.ui.centered.rounded.medium.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
+        img.ui.centered.rounded.medium.invert.image(src="{{c.url field_value gravity='face' crop='fit'}}" class=classes)
         //- a(href="{{c.url field_value gravity='face' crop='fit'}}")
         //-     |download
     //- +call_visual
