--- a/client/grid.jade
+++ b/client/grid.jade
@@ -25,7 +25,7 @@ template(name='grid_role_model')
         //- i.grey.thumbs.up.icon
         //- i.grey.clock.icon
         //- div
-        .ui.list
+        .ui.animated.selected.list
             each model_docs
                 +model_list_item_view
         //- span(title='views')
@@ -70,72 +70,66 @@ template(name='revenue_calculator')
                         .ui.three.stackable.cards
                             each items
                                 +simulated_rental_item
-                    .six.wide.column
-                        .ui.inline.header 
-                            +i name='money'
-                            |revenue
-                        i.circular.refresh.link.icon.recalc_revenue_stats
+                    .six.wide.column.result_column
                         .ui.header 
+                            |daily: 
+                            small spend 
+                            | #{total_daily_hours_committed}
+                            small hrs on 
                             | #{daily_rentals}
-                            small reservations/day
-                        .ui.header 
-                            |#{total_weekly_rentals}
-                            small total weekly rentals
-                        .ui.header 
+                            small reservations for
                             |$#{totaled_daily_revenue}
-                            small average daily revenue 
-                        .ui.header 
+                        .ui.header
+                            |weekly:  
+                            small spend
+                            | #{total_weekly_hours_committed}
+                            small hrs on
+                            |#{total_weekly_rentals}
+                            small reservations for
                             |$#{totaled_weekly_revenue}
-                            small total weekly revenue 
                         .ui.header 
                             |$#{totaled_monthly_revenue}
-                            small total monthly revenue 
-                            
-                        .ui.header 
-                            +i name='time'
-                            |time committed
-                        .ui.header #{total_daily_minutes_committed}
-                            small minutes/day
+                            small per month
                         .ui.header
                             small avg
-                            |#{average_hourly_wage}
-                            small $/hr wage
-                        .ui.header #{total_weekly_hours_committed}
-                            small hrs/week
+                            |$#{average_hourly_wage}
+                            small per hr wage
                         .ui.header 
-                            +i name='friends'
+                            //- +i name='friends'
                             |#{total_neighbor_interactions} neighbor interactions
 
 
 template(name='simulated_rental_item')
     .ui.card
         .content
-            //- .ui.inline.header item
+            .ui.inline.header simulated item
+            .ui.form
+                .eight.wide.field(title='individual reservations, extra revenue for requested pickup/dropoff')
+                    label reservations/day
+                    input.rental_amount(type='number' value="#{rental_amount}" min='0')
+                .ui.right.labeled.fluid.input(title='hourly rate, your cut depends on owner/handler status')
+                    input.average_hourly(type='number' value="#{average_hourly}" min='0')
+                    .ui.basic.label $/hr
+                .ui.labeled.fluid.input(title='hours per day rental is active/circulated')
+                    input.daily_hours_rented(type='number' value="#{daily_hours_rented}" min='0' max='24')
+                    .ui.basic.label hrs/day
+            //- |$#{average_hourly}/hr 
             +small_boolean_edit key='owned' icon='money bill' title='you own the product and passively get 50% of the fee')
             +small_boolean_edit key='handled' icon='suitcase rolling' title='you facilitate the rental and get 45% of the fee')
             if handled
-                +small_boolean_edit key='delivery' icon='luggage cart' title='assume 5min delivery/pickup for each reservation')
-            .ui.form
-                .eight.wide.field
-                    label reservations/day
-                    input.rental_amount(type='number' value="#{rental_amount}")
-                .ui.right.labeled.fluid.input
-                    input.average_hourly(type='number' value="#{average_hourly}")
-                    .ui.basic.label $/hr
-                .ui.labeled.fluid.input
-                    input.daily_hours_rented(type='number' value="#{daily_hours_rented}")
-                    .ui.basic.label hrs/day
-            //- |$#{average_hourly}/hr 
+                +small_boolean_edit key='delivery' icon='luggage cart' title='assume a 5min delivery and pickup per reservation')
             |* #{hourly_cut}% cut
+            div
+            .ui.inline.header(title='time spent facilitating transactions')
+                |= 
+                |#{minutes_committed}
+                small mins for
             .ui.inline.header 
-                |= $#{calculated_daily_revenue} 
-                small /day
-            .ui.header 
-                small * 7 = 
+                |$#{calculated_daily_revenue} 
+                small daily
+            .ui.inline.header 
                 |$#{calculated_weekly_revenue} 
-                small /week
-            .ui.header #{minutes_committed}
-                small minutes/day
+                small weekly
         if is_admin
             +remove_button
     
